gitops/argocd/ingressRoute_metrics.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-metrics
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd-metrics.local.timmybtech.com`)
      services:
        - name: argocd-metrics
          port: 8082
  tls:
    secretName: local-timmybtech-com-tls
